<resources>
    <string name="app_name">El Camino Beta 1.0</string>
    <string name="registro">Registro</string>
    <string name="apodo">Apodo</string>
    <string name="ELCIcon_logotipo">&#xf001;</string>
    <string name="ELCIcon_usercircle">&#xf002;</string>
    <string name="ELCIcon_routeab">&#xf003;</string>
    <string name="ELCIcon_toolfix">&#xf004;</string>
    <string name="ELCIcon_cog">&#xf005;</string>
    <string name="ELCIcon_comments">&#xf006;</string>
    <string name="ELCIcon_search">&#xf007;</string>
    <string name="ELCIcon_ambulancestandar">&#xf008;</string>
    <string name="ELCIcon_locationarrow">&#xf009;</string>
    <string name="ELCIcon_helmet">&#xf010;</string>
    <string name="ELCIcon_cartshop">&#xf011;</string>
    <string name="ELCIcon_crane">&#xf012;</string>
    <string name="ELCIcon_infocircle">&#xf013;</string>
    <string name="ELCIcon_stopcircle">&#xf014;</string>
    <string name="ELCIcon_playcircle">&#xf015;</string>
    <string name="ELCIcon_pausecircle">&#xf016;</string>
    <string name="ELCIcon_margencirculo">&#xf017;</string>
    <string name="ELCIcon_margeninter">&#xf018;</string>
    <string name="ELCIcon_margen">&#xf019;</string>
    <string name="ELCIcon_telephonecircle">&#xf020;</string>
    <string name="ELCIcon_estrellanull">&#xf021;</string>
    <string name="ELCIcon_estrellafill">&#xf022;</string>
    <string name="ELCIcon_pointgps">&#xf023;</string>
    <string name="ELCIcon_msnbase">&#xf024;</string>
    <string name="ELCIcon_msnuser">&#xf025;</string>
    <string name="ELCIcon_msngroup">&#xf026;</string>
    <string name="ELCIcon_msnmc">&#xf027;</string>
    <string name="ELCIcon_motoestandar">&#xf028;</string>
    <string name="ELCIcon_sendview">&#xf029;</string>
    <string name="ELCIcon_plus">&#xf030;</string>
    <string name="ELCFont_fa_500px">&#xf26e;</string>
    <string name="ELCFont_fa_adjust">&#xf042;</string>
    <string name="ELCFont_fa_adn">&#xf170;</string>
    <string name="center_ELCFont_fa_align">&#xf037;</string>
    <string name="justify_ELCFont_fa_align">&#xf039;</string>
    <string name="left_ELCFont_fa_align">&#xf036;</string>
    <string name="right_ELCFont_fa_align">&#xf038;</string>
    <string name="ELCFont_fa_amazon">&#xf270;</string>
    <string name="ELCFont_fa_ambulance">&#xf0f9;</string>
    <string name="language_interpreting_ELCFont_fa_american_sign">&#xf2a3;</string>
    <string name="ELCFont_fa_anchor">&#xf13d;</string>
    <string name="ELCFont_fa_android">&#xf17b;</string>
    <string name="ELCFont_fa_angellist">&#xf209;</string>
    <string name="ELCFont_fa_angle_double_down">&#xf103;</string>
    <string name="left_ELCFont_fa_angle_double">&#xf100;</string>
    <string name="double_right_ELCFont_fa_angle">&#xf101;</string>
    <string name="double_up_ELCFont_fa_angle">&#xf102;</string>
    <string name="down_ELCFont_fa_angle">&#xf107;</string>
    <string name="ELCFont_fa_angle_left">&#xf104;</string>
    <string name="right_ELCFont_fa_angle">&#xf105;</string>
    <string name="up_ELCFont_fa_angle">&#xf106;</string>
    <string name="ELCFont_fa_apple">&#xf179;</string>
    <string name="ELCFont_fa_archive">&#xf187;</string>
    <string name="chart_ELCFont_fa_area">&#xf1fe;</string>
    <string name="circle_down_ELCFont_fa_arrow">&#xf0ab;</string>
    <string name="circle_left_ELCFont_fa_arrow">&#xf0a8;</string>
    <string name="ELCFont_fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="ELCFont_fa_arrow_circle_o_left">&#xf190;</string>
    <string name="ELCFont_fa_arrow_circle_o_right">&#xf18e;</string>
    <string name="ELCFont_fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="ELCFont_fa_arrow_circle_right">&#xf0a9;</string>
    <string name="ELCFont_fa_arrow_circle_up">&#xf0aa;</string>
    <string name="ELCFont_fa_arrow_down">&#xf063;</string>
    <string name="ELCFont_fa_arrow_left">&#xf060;</string>
    <string name="ELCFont_fa_arrow_right">&#xf061;</string>
    <string name="ELCFont_fa_arrow_up">&#xf062;</string>
    <string name="ELCFont_fa_arrows">&#xf047;</string>
    <string name="ELCFont_fa_arrows_alt">&#xf0b2;</string>
    <string name="ELCFont_fa_arrows_h">&#xf07e;</string>
    <string name="ELCFont_fa_arrows_v">&#xf07d;</string>
    <string name="ELCFont_fa_asl_interpreting">&#xf2a3;</string>
    <string name="ELCFont_fa_assistive_listening_systems">&#xf2a2;</string>
    <string name="ELCFont_fa_asterisk">&#xf069;</string>
    <string name="ELCFont_fa_at">&#xf1fa;</string>
    <string name="ELCFont_fa_audio_description">&#xf29e;</string>
    <string name="ELCFont_fa_automobile">&#xf1b9;</string>
    <string name="ELCFont_fa_backward">&#xf04a;</string>
    <string name="ELCFont_fa_balance_scale">&#xf24e;</string>
    <string name="ELCFont_fa_ban">&#xf05e;</string>
    <string name="ELCFont_fa_bank">&#xf19c;</string>
    <string name="ELCFont_fa_bar_chart">&#xf080;</string>
    <string name="ELCFont_fa_bar_chart_o">&#xf080;</string>
    <string name="ELCFont_fa_barcode">&#xf02a;</string>
    <string name="ELCFont_fa_bars">&#xf0c9;</string>
    <string name="ELCFont_fa_battery_0">&#xf244;</string>
    <string name="ELCFont_fa_battery_1">&#xf243;</string>
    <string name="ELCFont_fa_battery_2">&#xf242;</string>
    <string name="ELCFont_fa_battery_3">&#xf241;</string>
    <string name="ELCFont_fa_battery_4">&#xf240;</string>
    <string name="ELCFont_fa_battery_empty">&#xf244;</string>
    <string name="ELCFont_fa_battery_full">&#xf240;</string>
    <string name="ELCFont_fa_battery_half">&#xf242;</string>
    <string name="ELCFont_fa_battery_quarter">&#xf243;</string>
    <string name="ELCFont_fa_battery_three_quarters">&#xf241;</string>
    <string name="ELCFont_fa_bed">&#xf236;</string>
    <string name="ELCFont_fa_beer">&#xf0fc;</string>
    <string name="ELCFont_fa_behance">&#xf1b4;</string>
    <string name="ELCFont_fa_behance_square">&#xf1b5;</string>
    <string name="ELCFont_fa_bell">&#xf0f3;</string>
    <string name="ELCFont_fa_bell_o">&#xf0a2;</string>
    <string name="ELCFont_fa_bell_slash">&#xf1f6;</string>
    <string name="ELCFont_fa_bell_slash_o">&#xf1f7;</string>
    <string name="ELCFont_fa_bicycle">&#xf206;</string>
    <string name="ELCFont_fa_binoculars">&#xf1e5;</string>
    <string name="ELCFont_fa_birthday_cake">&#xf1fd;</string>
    <string name="ELCFont_fa_bitbucket">&#xf171;</string>
    <string name="ELCFont_fa_bitbucket_square">&#xf172;</string>
    <string name="ELCFont_fa_bitcoin">&#xf15a;</string>
    <string name="ELCFont_fa_black_tie">&#xf27e;</string>
    <string name="ELCFont_fa_blind">&#xf29d;</string>
    <string name="ELCFont_fa_bluetooth">&#xf293;</string>
    <string name="ELCFont_fa_bluetooth_b">&#xf294;</string>
    <string name="ELCFont_fa_bold">&#xf032;</string>
    <string name="ELCFont_fa_bolt">&#xf0e7;</string>
    <string name="ELCFont_fa_bomb">&#xf1e2;</string>
    <string name="ELCFont_fa_book">&#xf02d;</string>
    <string name="ELCFont_fa_bookmark">&#xf02e;</string>
    <string name="ELCFont_fa_bookmark_o">&#xf097;</string>
    <string name="ELCFont_fa_braille">&#xf2a1;</string>
    <string name="ELCFont_fa_briefcase">&#xf0b1;</string>
    <string name="ELCFont_fa_btc">&#xf15a;</string>
    <string name="ELCFont_fa_bug">&#xf188;</string>
    <string name="ELCFont_fa_building">&#xf1ad;</string>
    <string name="ELCFont_fa_building_o">&#xf0f7;</string>
    <string name="ELCFont_fa_bullhorn">&#xf0a1;</string>
    <string name="ELCFont_fa_bullseye">&#xf140;</string>
    <string name="ELCFont_fa_bus">&#xf207;</string>
    <string name="ELCFont_fa_buysellads">&#xf20d;</string>
    <string name="ELCFont_fa_cab">&#xf1ba;</string>
    <string name="ELCFont_fa_calculator">&#xf1ec;</string>
    <string name="ELCFont_fa_calendar">&#xf073;</string>
    <string name="ELCFont_fa_calendar_check_o">&#xf274;</string>
    <string name="ELCFont_fa_calendar_minus_o">&#xf272;</string>
    <string name="ELCFont_fa_calendar_o">&#xf133;</string>
    <string name="ELCFont_fa_calendar_plus_o">&#xf271;</string>
    <string name="ELCFont_fa_calendar_times_o">&#xf273;</string>
    <string name="ELCFont_fa_camera">&#xf030;</string>
    <string name="ELCFont_fa_camera_retro">&#xf083;</string>
    <string name="ELCFont_fa_car">&#xf1b9;</string>
    <string name="ELCFont_fa_caret_down">&#xf0d7;</string>
    <string name="ELCFont_fa_caret_left">&#xf0d9;</string>
    <string name="ELCFont_fa_caret_right">&#xf0da;</string>
    <string name="ELCFont_fa_caret_square_o_down">&#xf150;</string>
    <string name="ELCFont_fa_caret_square_o_left">&#xf191;</string>
    <string name="ELCFont_fa_caret_square_o_right">&#xf152;</string>
    <string name="ELCFont_fa_caret_square_o_up">&#xf151;</string>
    <string name="ELCFont_fa_caret_up">&#xf0d8;</string>
    <string name="ELCFont_fa_cart_arrow_down">&#xf218;</string>
    <string name="ELCFont_fa_cart_plus">&#xf217;</string>
    <string name="ELCFont_fa_cc">&#xf20a;</string>
    <string name="ELCFont_fa_cc_amex">&#xf1f3;</string>
    <string name="ELCFont_fa_cc_diners_club">&#xf24c;</string>
    <string name="ELCFont_fa_cc_discover">&#xf1f2;</string>
    <string name="ELCFont_fa_cc_jcb">&#xf24b;</string>
    <string name="ELCFont_fa_cc_mastercard">&#xf1f1;</string>
    <string name="ELCFont_fa_cc_paypal">&#xf1f4;</string>
    <string name="ELCFont_fa_cc_stripe">&#xf1f5;</string>
    <string name="ELCFont_fa_cc_visa">&#xf1f0;</string>
    <string name="ELCFont_fa_certificate">&#xf0a3;</string>
    <string name="ELCFont_fa_chain">&#xf0c1;</string>
    <string name="ELCFont_fa_chain_broken">&#xf127;</string>
    <string name="ELCFont_fa_check">&#xf00c;</string>
    <string name="ELCFont_fa_check_circle">&#xf058;</string>
    <string name="ELCFont_fa_check_circle_o">&#xf05d;</string>
    <string name="ELCFont_fa_check_square">&#xf14a;</string>
    <string name="ELCFont_fa_check_square_o">&#xf046;</string>
    <string name="ELCFont_fa_chevron_circle_down">&#xf13a;</string>
    <string name="ELCFont_fa_chevron_circle_left">&#xf137;</string>
    <string name="ELCFont_fa_chevron_circle_right">&#xf138;</string>
    <string name="ELCFont_fa_chevron_circle_up">&#xf139;</string>
    <string name="ELCFont_fa_chevron_down">&#xf078;</string>
    <string name="ELCFont_fa_chevron_left">&#xf053;</string>
    <string name="ELCFont_fa_chevron_right">&#xf054;</string>
    <string name="ELCFont_fa_chevron_up">&#xf077;</string>
    <string name="ELCFont_fa_child">&#xf1ae;</string>
    <string name="ELCFont_fa_chrome">&#xf268;</string>
    <string name="ELCFont_fa_circle">&#xf111;</string>
    <string name="ELCFont_fa_circle_o">&#xf10c;</string>
    <string name="ELCFont_fa_circle_o_notch">&#xf1ce;</string>
    <string name="ELCFont_fa_circle_thin">&#xf1db;</string>
    <string name="ELCFont_fa_clipboard">&#xf0ea;</string>
    <string name="ELCFont_fa_clock_o">&#xf017;</string>
    <string name="ELCFont_fa_clone">&#xf24d;</string>
    <string name="ELCFont_fa_close">&#xf00d;</string>
    <string name="ELCFont_fa_cloud">&#xf0c2;</string>
    <string name="ELCFont_fa_cloud_download">&#xf0ed;</string>
    <string name="ELCFont_fa_cloud_upload">&#xf0ee;</string>
    <string name="ELCFont_fa_cny">&#xf157;</string>
    <string name="ELCFont_fa_code">&#xf121;</string>
    <string name="ELCFont_fa_code_fork">&#xf126;</string>
    <string name="ELCFont_fa_codepen">&#xf1cb;</string>
    <string name="ELCFont_fa_codiepie">&#xf284;</string>
    <string name="ELCFont_fa_coffee">&#xf0f4;</string>
    <string name="ELCFont_fa_cog">&#xf013;</string>
    <string name="ELCFont_fa_cogs">&#xf085;</string>
    <string name="ELCFont_fa_columns">&#xf0db;</string>
    <string name="ELCFont_fa_comment">&#xf075;</string>
    <string name="ELCFont_fa_comment_o">&#xf0e5;</string>
    <string name="ELCFont_fa_commenting">&#xf27a;</string>
    <string name="ELCFont_fa_commenting_o">&#xf27b;</string>
    <string name="ELCFont_fa_comments">&#xf086;</string>
    <string name="ELCFont_fa_comments_o">&#xf0e6;</string>
</resources>