<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.onlinesellers.elcaminobeta10.HomeActivity"
    android:background="@color/ELCColorBack2White">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/ELCColorBlak"
        android:weightSum="2"
        android:id="@+id/linearLayoutMenuHomeBarBot"
        android:layout_alignParentEnd="false">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/ELCIcon_locationarrow"
            android:id="@+id/home_btn_b1"
            android:background="@color/ELCColorClear"
            android:textSize="45dp"
            android:textAlignment="center"
            android:tag="1" />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/ELCIcon_crane"
            android:id="@+id/home_btn_b2"
            android:background="@color/ELCColorClear"
            android:textSize="45dp"
            android:textAlignment="center"
            android:tag="2" />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/ELCIcon_telephonecircle"
            android:id="@+id/home_btn_b3"
            android:background="@color/ELCColorClear"
            android:textSize="45dp"
            android:textAlignment="center"
            android:tag="3" />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/ELCIcon_toolfix"
            android:id="@+id/home_btn_b4"
            android:background="@color/ELCColorClear"
            android:textSize="45dp"
            android:textAlignment="center"
            android:tag="4" />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/ELCIcon_cartshop"
            android:id="@+id/home_btn_b5"
            android:background="@color/ELCColorClear"
            android:textSize="45dp"
            android:textAlignment="center"
            android:tag="5" />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/ELCIcon_helmet"
            android:id="@+id/home_btn_b6"
            android:background="@color/ELCColorClear"
            android:textSize="45dp"
            android:textAlignment="center"
            android:tag="6" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/row_activity_ligth"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/include"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/textView8"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/ELCIcon_locationarrow"
                android:id="@+id/home_bar_status_routr_s1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="44dp"
                android:textColor="@color/ELCColorBlak"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Casa"
                android:id="@+id/textView10"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/home_bar_status_routr_s1"
                android:textColor="@color/ELCColorBlak"
                android:textSize="20dp"
                android:paddingLeft="5dp"
                android:layout_alignParentRight="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentBottom="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RECORRIDO"
                android:id="@+id/textView11"
                android:layout_below="@+id/textView10"
                android:layout_toEndOf="@+id/home_bar_status_routr_s1"
                android:textColor="@color/ELCColorBlackSubtitle"
                android:paddingLeft="5dp"
                android:textSize="10dp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/ELCIcon_stopcircle"
                android:id="@+id/home_bar_status_routr_s2"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/textView8"
                android:layout_alignEnd="@+id/textView8"
                android:textSize="44dp"
                android:textColor="@color/ELCColorBlak"
                android:textAlignment="center" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/ELCIcon_pausecircle"
                android:id="@+id/home_bar_status_routr_s3"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/home_bar_status_routr_s2"
                android:layout_toStartOf="@+id/home_bar_status_routr_s2"
                android:textColor="@color/ELCColorBlak"
                android:textSize="44dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/ELCIcon_playcircle"
                android:id="@+id/home_bar_status_routr_s4"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/home_bar_status_routr_s3"
                android:layout_toStartOf="@+id/home_bar_status_routr_s3"
                android:textAlignment="center"
                android:textColor="@color/ELCColorBTNBlackDes"
                android:textSize="44dp" />

        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewActiviry"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayoutMenuHomeBarBot"
        android:layout_alignParentTop="false" />

    <include
        android:layout_width="match_parent"
        android:layout_height="40dp"
        layout="@layout/bar_top_menu"
        android:id="@+id/include" />


</RelativeLayout>
