<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.onlinesellers.elcaminobeta10.PlayRoutrLookActivity"
    android:background="@color/ELCColorBlak">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView3"
                android:src="@drawable/app_logo_full"
                android:scaleType="fitCenter"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre Completo Del Usuario"
                android:id="@+id/textView9"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alias"
                android:id="@+id/textView12"
                android:textSize="40dp"
                android:layout_below="@+id/textView9"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/linearLayout3"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignLeft="@+id/imageView3"
                android:layout_below="@+id/imageView3">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/ELCIcon_pausecircle"
                    android:id="@+id/look_btn_a"
                    android:background="@color/ELCColorClear"
                    android:textSize="80sp" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/ELCIcon_stopcircle"
                    android:id="@+id/look_btn_b"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-100dp"
                    android:background="@color/ELCColorClear"
                    android:textSize="80dp" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/ELCIcon_ambulancestandar"
                    android:id="@+id/look_btn_c"
                    android:layout_gravity="right"
                    android:layout_marginTop="-100dp"
                    android:background="@color/ELCColorClear"
                    android:textSize="80dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Licencia: 121202984839492"
                android:id="@+id/textView13"
                android:layout_below="@+id/linearLayout3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_alignLeft="@+id/linearLayout3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sangre: O+"
                android:id="@+id/textView14"
                android:layout_below="@+id/textView13"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IMSS: 92765324274783"
                android:id="@+id/textView15"
                android:layout_below="@+id/textView14"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gastos Medicos: 28647384983764"
                android:id="@+id/textView16"
                android:layout_below="@+id/textView15"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:layout_marginBottom="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/textView16"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/ELCColorWhite"
                android:id="@+id/relativeLayout2">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/ELCIcon_locationarrow"
                    android:id="@+id/look_icon_row"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/ELCColorBlak"
                    android:layout_marginTop="5dp"
                    android:textSize="45sp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="Titulo Ruta"
                    android:id="@+id/look_titulo"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/look_icon_row"
                    android:layout_toEndOf="@+id/look_icon_row"
                    android:textColor="@color/ELCColorBlak"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:textAlignment="textStart"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dirección de la ruta elegida"
                    android:id="@+id/look_describe"
                    android:layout_below="@+id/look_titulo"
                    android:layout_alignLeft="@+id/look_titulo"
                    android:layout_alignStart="@+id/look_titulo"
                    android:textStyle="italic"
                    android:textColor="@color/ELCColorBlackSubtitle"
                    android:lines="1" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
